<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PortableCheckIn</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="LogetUser">Loget user</string>
    <string name="CheckInNR">CheckIn NR</string>
    <string name="Informace_o_Vozidle">Informace o vozidle</string>
    <string name="SPZ">SPZ</string>
    <string name="PredajDat">Datum prodeje/MR</string>
    <string name="PoistPripad">Pojišťovací událost</string>
    <string name="STK">Platnost STK</string>
    <string name="OTP">OTP</string>
    <string name="StavPaliva">Stav paliva</string>
    <string name="VIN">VIN</string>
    <string name="Zakaznik">Zákazník</string>
    <string name="VozPristavil">Vůz přistavil</string>
    <string name="StavTachomeru">Stav tachomeru</string>
    <string name="PlatnostEK">Platnost EK</string>
    <string name="ServisnaKnizka">Servisní knížka</string>
    <string name="Interier">Interiér</string>
    <string name="BluePrint">Blue print</string>
    <string name="LevyBok">Levý bok</string>
    <string name="ZadnaCast">Zadní část</string>
    <string name="PravyBok">Pravý bok</string>
    <string name="PrednaCast">Přední část</string>
    <string name="Strecha">Střecha</string>
    <string name="Pohledy">Pohledy</string>
    <string name="stavInterier">AA,A,B,C,CC</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="AA">AA</string>
    <string name="CC">CC</string>
    <string name="Exterier">Exteriér</string>
    <string name="Oderky">Oděrky</string>
    <string name="UserName">Uživatel</string>
    <string name="Password">Heslo</string>
    <string name="Setup">Nastavení</string>
    <string name="Login">Přihlásit</string>
    <string name="serviceNotifier">service notifier</string>

    <item name="pager" type="id"/>

    <string name="databaseVersion">1</string>
    <string name="logoff">Logo off</string>
    <string name="Zdroj">Zdroj</string>
    <string name="Status">Status</string>
    <string name="RZV">RZV</string>
    <string name="Vozidlo">Vozidlo</string>
    <string name="PZc">PZ č.</string>

    <string-array name="PlanZakGrdCaptions">
        <item>@string/Zdroj</item>
        <item>@string/Status</item>
        <item>@string/RZV</item>
        <item>@string/Vozidlo</item>
        <item>@string/Zakaznik</item>
        <item>@string/PZc</item>
    </string-array>

    <item name="backgrounImage" type="id"/>
    <item name="bacgrounMask" type="id"/>
    <item name="mainValuelayout1" type="id"/>
    <item name="mainValuelayout2" type="id"/>

    <string name="novyCheckin">Nový Check-In</string>
    <string name="odesliData">Odešli data</string>
    <string name="strucHistory">Stručná historie</string>
    <string name="historia">Historie</string>
    <string name="Informace_o_zakaznikovi">Informace o zákazníkovi</string>
    <string name="Protokol">Protokol</string>
    <string name="Palivo">Palivo</string>
    <string name="Scenar">Scénář</string>
    <string name="Typ">Typ</string>
    <string name="Popis">Popis</string>
    <string name="PPNDc">PP/ND č</string>
    <string name="OSc">OS č</string>

    <string-array name="VozHistoryGrdCaptions">
        <item>@string/Typ</item>
        <item>@string/Popis</item>
        <item>@string/PPNDc</item>
        <item>@string/OSc</item>
    </string-array>

    <string name="premena">premena</string>
    <string name="hodnota">hodnota</string>

    <string-array name="GrdNameValue">
        <item>@string/premena</item>
        <item>@string/hodnota</item>
    </string-array>

    <string name="Vybavy">Výbavy</string>
    <string name="PovinneVybavy">Povinné výbavy</string>
    <string name="Loading_Data">Načítání dat</string>
    <string name="Please_wait">Prosím čekejte</string>
    <string name="Error_title">Chyba</string>
    <string name="Pozadovane">Požadováno</string>
    <string name="FuelStav">R,¼,½,¾,F</string>
    <string name="prazna">0</string>
    <string name="stvrtina">¼</string>
    <string name="polovica">½</string>
    <string name="tristvrtina">¾</string>
    <string name="P">P</string>

    <string-array name="Palivo">
        <item>@string/prazna</item>
        <item>@string/stvrtina</item>
        <item>@string/polovica</item>
        <item>@string/tristvrtina</item>
        <item>@string/P</item>
    </string-array>

    <string name="checkButton">checkButton</string>

    <string-array name="StavInterieru">
        <item>@string/AA</item>
        <item>@string/A</item>
        <item>@string/B</item>
        <item>@string/CC</item>
        <item>@string/C</item>
    </string-array>

    <string name="service">Service</string>
    <string name="title_activity_item_unit">item_unit</string>
    <string name="title_activity_title_bar">title_bar</string>
    <string name="data_source">Zdroj</string>
    <string name="Satus">Status</string>
    <string name="plan_zak_cis">PZ.č.</string>
    <string name="historia_vozu">Historie vozu</string>
    <string name="typ">Typ</string>
    <string name="popis">Popis</string>
    <string name="pp_nd_c">PP/ND č.</string>
    <string name="os_c">Os. č.</string>
    <string name="stav_oleje">Stav oleje</string>
    <string name="stav_oleje_indicator">Min,OK,Max</string>
    <string name="min">Min</string>
    <string name="OK">OK</string>
    <string name="Max">Max</string>
    <string name="title_activity_unit_service">UnitService</string>
    <string name="title_activity_item_unit_packet">ItemUnitPacketActivity</string>
    <string name="title_activity_item_paket">item_paket</string>
    <string name="title_activity_base_grid">BaseGridActivity</string>
    <string name="title_activity_item_packet">Item_packet</string>
    <string name="Poradce">Poradce</string>
    <string name="CisloPlanZakazky">Číslo plánované zakázky</string>
    <string name="CisloCheckinu">Check-In č.</string>
    <string name="VOZIDLO">VOZIDLO</string>
    <string name="POSKODENI">POŠKOZENÍ</string>
    <string name="PROHLIDKA">PROHLÍDKA</string>
    <string name="NABIDKA">NABÍDKA</string>
    <string name="heslo">Heslo</string>
    <string name="Uzivatel">Užívatel</string>
    <string name="Prihlaseni">Přihlášení</string>
    <string name="My">Mé</string>
    <string name="Others">Ostatní</string>
    <string name="Naplanovane_zakazky">Naplánované zakázky / Rozpracované Check-Iny</string>
    <string name="PrazdnyZoznam">Prázdny seznam</string>
    <string name="provozovna">Provozovna</string>
    <string name="tym">Tým</string>
    <string name="cinnost">Činnost</string>
    <string name="Planovane_cinnosti">Plánované činnosti</string>
    <string name="Zakazkovi_list">Zakázkový list</string>
    <string name="Cena">Cena</string>
    <string name="Kod_zavad">Kód závady</string>
    <string name="Typ_akce">Typ akce</string>
    <string name="Odlozene_sluzby">Odložené služby</string>
    <string name="Svolavacie_a_dielenske_akcie">Svolávací a dílenské akce</string>
    <string name="vozidlo_nevybrano">Vozidlo nevybráno</string>
    <string name="Sluzby">Služby</string>
    <string name="Celky">Celky</string>
    <string name="brands">Značky</string>
    <string name="Volne_vybavy">Volné výbavy</string>
    <string name="Pakety">Pakety</string>
    <string name="All_packets">Všechny pakety</string>

    <string-array name="Prehliadka">
        <item>@string/Vybavy</item>
        <item>@string/Sluzby</item>
        <item>@string/Celky</item>
        <item>@string/Pakety</item>
    </string-array>

    <string name="Nahradni_dily">Náhradní díly</string>
    <string name="Pracovni_pozice">Pracovní pozice</string>
    <string-array name="DetailPaketuList">
        <item>@string/Pracovni_pozice</item>
        <item>@string/Nahradni_dily</item>
    </string-array>

    <string name="Nahled">Náhled</string>
    <string name="Smazat_foto">Smazat foto</string>
    <string name="PozadPoleNevypl">Jedno nebo více požadovaných polí není vyplněno</string>
    <string name="Subject">Předmět</string>
    <string name="Message">Správa</string>
    <string name="Send">Odeslat</string>
    <string name="Mail">Odeslání protokolu E-mailem</string>
    <string name="XyzmoURI">SIGNificant server URL</string>
    <string name="XyzmoExterUse">Použití exetrní SIGNificant aplikace</string>
    <string name="search_packets">Vyhledávaní paketů</string>
    <string name="action_Odhlaseni">Odhlášení</string>
    <string name="ZmazUnit">Chcete zrušit danou volbu?</string>
    <string name="Ano">Ano</string>
    <string name="Ne">Ne</string>
    <string name="lblEmail">Komu</string>
    <string name="Uzivate">Uživatel</string>
    <string name="Prihlasenie">Přihlášení</string>
    <string name="Nastavenie_prihlas_udajov">Nastavení přihlašovacích údajů</string>
    <string name="Cesta_k_middleware">Cesta k PChI middleware</string>
    <string name="Poznamka">Poznámka</string>
    <string name="Odesilam_data">Odesílám data</string>
    <string name="Smazat_aktualne_data">Smazat aktuální data</string>
    <string name="Material">Materiál</string>
    <string name="Prace">Práce</string>
    <string name="Celkem">Celkem</string>
    <string name="Nastavenie">Nastavení</string>
    <string name="Logovanie">Logovaní</string>
    <string name="Zobrazovat_detail_paketu">Zobrazovat detail paketů</string>
    <string name="TimeOut_setting">Hodnota time-out pre přenos fotografií do DMS</string>
    <string name="Rozlisenie_fotografii">Rozlišení fotografií</string>
    <string name="serviceURIEmpty">Chyba: není vyplněna adresa serveru. Před přihlášením k aplikaci je nutné zadat adresu serveru</string>

</resources>
