<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_novyCheckin"
        android:orderInCategory="0"
        android:showAsAction="never"
        android:title="@string/novyCheckin"
        />
    <item
        android:id="@+id/action_odesliData"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/odesliData"
        />
    <item
        android:id="@+id/action_strucHistory"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/strucHistory"
        />
    <item
        android:id="@+id/action_historia"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/historia"
        />
    <item
        android:id="@+id/action_InfVozidla"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/infVozidla"
        />
    <item
        android:id="@+id/action_InfZakznik"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/InfZakaznik"
        />
    <item
        android:id="@+id/action_Protokol"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/Protokol"
        />            
    <item
        android:id="@+id/log_off"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/logoff"
        />    

</menu>
