<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Subject"
        android:id="@+id/lblSubject"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtEmail"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtSubject"
        android:layout_below="@+id/lblSubject"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:minLines="1"
        android:layout_marginTop="16dp"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Message"
        android:id="@+id/lblMessage"
        android:layout_below="@+id/txtSubject"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtMessage"
        android:layout_below="@+id/lblMessage"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:minLines="5"
        android:layout_marginTop="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Send"
        android:id="@+id/btnSend"
        android:layout_below="@+id/txtMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="lblEmail"
        android:id="@+id/lblEmail"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtEmail"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/lblEmail"
        android:layout_alignParentStart="true"
        android:minWidth="300dp"
        android:layout_marginTop="16dp" />
</RelativeLayout>