<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlTopControls"
    style="@android:style/ButtonBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/transparentBacground"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android:layout_width="650dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Uzivatel"
            android:id="@+id/lblUzivatel"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/lblPrihlasenie"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/txtLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/UserName"
            android:imeOptions="actionNext"
            android:inputType="text|textNoSuggestions"
            android:nextFocusDown="@+id/txtPassword"
            android:singleLine="true"
            android:layout_below="@+id/lblUzivatel"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/lblHeslo"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Prihlasenie"
            android:id="@+id/lblPrihlasenie"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/gray" />

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="onLoginClicked"
            android:text="@string/Login"
            android:layout_below="@+id/txtPassword"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp" />

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/btnSetup"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSettupClicked"
            android:text="@string/Setup"
            android:layout_below="@+id/txtPassword"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_toStartOf="@id/btnLogin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Heslo"
            android:id="@+id/lblHeslo"
            android:layout_alignParentTop="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="false"
            android:layout_below="@+id/lblPrihlasenie"
            android:layout_alignParentRight="false"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignStart="@id/txtPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="verze"
            android:id="@+id/lblVerze"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"
            android:layout_alignBottom="@+id/lblPrihlasenie"
            android:textColor="@color/gray" />
    </RelativeLayout>

</RelativeLayout>
